Implement delete appointment (add cors support for delete)