@@ -63,6 +63,8 @@ kubectl describe secret pg-pass
 for filters to work:
 ```bash
 export JDK_JAVA_OPTIONS=--add-opens=java.base/java.lang=ALL-UNNAMED
+
+ENV JDK_JAVA_OPTIONS="--add-opens=java.base/java.lang=ALL-UNNAMED"
 ```
 
 
